--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,8 @@
 <html>
     <head>
-        <title>{{ title }}</title>
+        <title>Quiz</title>
     </head>
     <body>
-        
     
         <script src="js/quiz.js"></script>
     </body>
