form to enter name if not already done

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,14 @@
         <title>Quiz</title>
     </head>
     <body>
-    
-        <script src="js/quiz.js"></script>
+
+        <div id="quiz-container"></div>
+        
+        <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+        <script type="text/javascript" src="js/store-json2.min.js"></script>
+        <script type="text/javascript" src="js/hogan-2.0.0.min.js"></script>
+        <script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
+        <script type="text/javascript" src="js/quiz-templates.js"></script>
+        <script type="text/javascript" src="js/quiz.js"></script>
     </body>
 </html>
