--- a/views/index.html
+++ b/views/index.html
@@ -1,15 +1,32 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Quiz</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" />
+        <link rel="stylesheet" type="text/css" href="css/quiz.css" />
     </head>
     <body>
+        <div class="container-narrow">
+            <div class="masthead">
+                <ul class="nav nav-pills">
+                    <li>R</li>
+                    <li>B</li>
+                    <li>G</li>
+                    <li>Y</li>
+                </ul>
+            </div>
 
-        <div id="quiz-container"></div>
+            <div id="quiz-container"></div>
+        </div>
         
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
         <script type="text/javascript" src="js/store-json2.min.js"></script>
         <script type="text/javascript" src="js/hogan-2.0.0.min.js"></script>
         <script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
         {{# host }}
             <script type="text/javascript" src="js/quiz-templates-host.js"></script>
