host can trigger quiz start

--- a/views/index.html
+++ b/views/index.html
@@ -27,6 +27,7 @@
         <script type="text/javascript" src="js/hogan-2.0.0.min.js"></script>
         <script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/jquery.hammer.min.js"></script>
 
         {{# host }}
             <script type="text/javascript" src="js/quiz-templates-host.js"></script>
