--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,7 @@
         
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
         <script type="text/javascript" src="js/store-json2.min.js"></script>
+        <script type="text/javascript" src="js/howler.min.js"></script>
         <script type="text/javascript" src="js/hogan-2.0.0.min.js"></script>
         <script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
