basic score display

--- a/views/index.html
+++ b/views/index.html
@@ -11,12 +11,20 @@
     <body>
         <div class="container-narrow">
             <div class="masthead">
-                <ul class="nav nav-pills">
-                    <li>R</li>
-                    <li>B</li>
-                    <li>G</li>
-                    <li>Y</li>
-                </ul>
+                <div id="scores">
+                    <div class="score red">
+                        <span class="value"></span>
+                    </div>
+                    <div class="score blue">
+                        <span class="value"></span>
+                    </div>
+                    <div class="score green">
+                        <span class="value"></span>
+                    </div>
+                    <div class="score yellow">
+                        <span class="value"></span>
+                    </div>
+                </div>
             </div>
 
             <div id="quiz-container"></div>
