--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -11,3 +11,40 @@ body {
 .container-narrow > hr {
   margin: 30px 0;
 }
+
+.score {
+  border: 1px solid black;
+  color: black;
+  float: left;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  margin-bottom: 50px;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.score.red {
+  background-color: red;
+}
+
+.score.blue {
+  background-color: #3399FF;
+}
+
+.score.green {
+  background-color: green;
+}
+
+.score.yellow {
+  background-color: yellow;
+}
+
+#quiz-container {
+  clear: both;
+}
+
+.host-score-edit {
+  color: #c8c8c8;
+}
