--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -18,11 +18,15 @@ body {
   float: left;
   width: 50px;
   height: 50px;
+  margin-bottom: 20px;
   text-align: center;
   line-height: 50px;
-  margin-bottom: 50px;
   font-size: 25px;
   font-weight: bold;
+}
+
+.host .score {
+  margin-bottom: 100px;
 }
 
 .score.red {
