--- a/views/index.html
+++ b/views/index.html
@@ -8,20 +8,20 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" />
         <link rel="stylesheet" type="text/css" href="css/quiz.css" />
     </head>
-    <body>
+    <body {{# host }}class="host"{{/ host }}>
         <div class="container-narrow">
             <div class="masthead">
                 <div id="scores">
-                    <div class="score red">
+                    <div class="score red" data-team="red">
                         <span class="value"></span>
                     </div>
-                    <div class="score blue">
+                    <div class="score blue" data-team="blue">
                         <span class="value"></span>
                     </div>
-                    <div class="score green">
+                    <div class="score green" data-team="green">
                         <span class="value"></span>
                     </div>
-                    <div class="score yellow">
+                    <div class="score yellow" data-team="yellow">
                         <span class="value"></span>
                     </div>
                 </div>
