players can edit their name/team

--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,8 @@
                         <span class="value"></span>
                     </div>
                 </div>
+
+                <div id="player-details"></div>
             </div>
 
             <div id="quiz-container"></div>
@@ -38,7 +40,7 @@
             <div class="modal-body">
                 <form id="player-details-form">
                     <div class="errors"></div>
-                    
+
                     <input name="name" placeholder="Your name" /><br />
                     <input type="radio" name="team" value="red" id="radio-team-red" /><label for="radio-team-red">Red</label>
                     <input type="radio" name="team" value="blue" id="radio-team-blue" /><label for="radio-team-blue">Blue</label>
