animations make mobiles sad

--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,7 @@
             <div id="quiz-container"></div>
         </div>
 
-        <div class="modal hide fade" id="modal-player-details">
+        <div class="modal hide" id="modal-player-details">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h3>Player details</h3>
