player list always visible for host

--- a/views/index.html
+++ b/views/index.html
@@ -30,6 +30,8 @@
             </div>
 
             <div id="quiz-container"></div>
+
+            <div id="lobby-container"></div>
         </div>
 
         <div class="modal hide" id="modal-player-details">
