--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="modal-footer">
               <a href="#" data-dismiss="modal" class="btn">Close</a>
-              <a href="#" class="btn btn-primary">Save changes</a>
+              <a href="#" class="btn btn-primary">Update</a>
           </div>
         </div>
 
@@ -67,6 +67,24 @@
         <script type="text/javascript" src="js/jquery.hammer.min.js"></script>
 
         {{# host }}
+            <div class="modal hide" id="modal-host-password">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3>Password</h3>
+                </div>
+                <div class="modal-body">
+                    <form id="host-password-form">
+                        <input name="password" type="password" placeholder="Password" />
+                    </form>
+              </div>
+              <div class="modal-footer">
+                  <a href="#" data-dismiss="modal" class="btn">Close</a>
+                  <a href="#" class="btn btn-primary">Save</a>
+              </div>
+            </div>
+
+
+            <script type="text/javascript" src="js/hmac-sha256.js"></script>
             <script type="text/javascript" src="js/quiz-templates-host.js"></script>
             <script type="text/javascript" src="js/quiz-host.js"></script>
         {{/ host }}
