--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -3,13 +3,29 @@ body {
   padding-bottom: 40px;
 }
 
-/* Custom container */
-.container-narrow {
-  margin: 0 auto;
-  max-width: 700px;
+label.inline {
+  display: inline-block;
+  margin: 5px;
 }
-.container-narrow > hr {
-  margin: 30px 0;
+
+label.title {
+  font-weight: bold;
+}
+
+input {
+  color: black;
+}
+
+#label-team {
+  margin: 20px 0 0 0;
+}
+
+#team-radios input {
+  margin: 0;
+}
+
+#team-radios label {
+  margin: 0 10px 0 1px;
 }
 
 .score {
