--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -1,7 +1,21 @@
 body {
   padding-top: 20px;
   padding-bottom: 40px;
+  text-align: center;
 }
+
+.modal {
+  text-align: left;
+}
+
+.container-narrow {
+  display: inline-block;
+  text-align: left;
+}
+.container-narrow > hr {
+  margin: 30px 0;
+}
+
 
 label.inline {
   display: inline-block;
