--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" />
         <link rel="stylesheet" type="text/css" href="css/quiz.css" />
     </head>
-    <body {{# host }}class="host"{{/ host }}>
+    <body class="{{# host }}host{{/ host }}{{^ host }}player{{/ host }}">
         <div class="container-narrow">
             <div class="masthead">
                 <div id="scores">
